--- a/lessons.html
+++ b/lessons.html
@@ -48,37 +48,40 @@
         </thead>
         <tbody>
             <tr>
-                <td>
-                    <form class="roz">
-                        <input type="checkbox"> </form></td>
+                <td style="border-top-left-radius: 21px; border-bottom-left-radius: 21px;">    
+                        <input type="checkbox"></input> </></>
                 <td>01</td>
                 <td>HTML Basic</td>
                 <td>18/12/19</td>
                 <td style="border-top-right-radius: 21px; border-bottom-right-radius: 21px;"><div class="icon-hover"><i class="fa-solid fa-download" alt=""></img></div></td>
             </tr>
             <tr>
-                <td style="border-top-left-radius: 21px; border-bottom-left-radius: 21px;"><div class="icon-hover"><i class="fa-solid fa-download"></i></div></td>
+                <td form class="roz"  style="border-top-left-radius: 21px; border-bottom-left-radius: 21px;" >
+                        <input type="checkbox"></input> </form></td>
                 <td>02</td>
                 <td>HTML Basic</td>
                 <td>20/12/19</td>
                 <td style="border-top-right-radius: 21px; border-bottom-right-radius: 21px;"><div class="icon-hover"><i class="fa-solid fa-download"></i></div></td>
             </tr>
             <tr>
-                <td style="border-top-left-radius: 21px; border-bottom-left-radius: 21px;"><div class="icon-hover"><i class="fa-solid fa-download"></i></div></td>
+                <td form class="roz"  style="border-top-left-radius: 21px; border-bottom-left-radius: 21px;" >
+                    <input type="checkbox"></input> </form></td>
                 <td>03</td>
                 <td>HTML Basic</td>
                 <td>23/12/19</td>
                 <td style="border-top-right-radius: 21px; border-bottom-right-radius: 21px;"><div class="icon-hover"><i class="fa-solid fa-download"></i></div></td>
             </tr>
             <tr>
-                <td style="border-top-left-radius: 21px; border-bottom-left-radius: 21px;"><div class="icon-hover"><i class="fa-solid fa-download"></i></div></td>
+                <td form class="roz"  style="border-top-left-radius: 21px; border-bottom-left-radius: 21px;" >
+                    <input type="checkbox"></input> </form></td>
                 <td>04</td>
                 <td>HTML Basic</td>
                 <td>25/12/19</td>
                 <td style="border-top-right-radius: 21px; border-bottom-right-radius: 21px;"><div class="icon-hover"><i class="fa-solid fa-download"></i></div></td>
             </tr>
             <tr>
-                <td style="border-top-left-radius: 21px; border-bottom-left-radius: 21px;"><div class="icon-hover"><i class="fa-solid fa-download"></i></div></td>
+                <td form class="roz"  style="border-top-left-radius: 21px; border-bottom-left-radius: 21px;" >
+                    <input type="checkbox"></input> </form></td>
                 <td>05</td>
                 <td>HTML Basic</td>
                 <td>27/12/19</td>
