--- a/index.html
+++ b/index.html
@@ -38,22 +38,46 @@
     <!-- <ul class="back_hover"> 
         <img class="image_r1_1" src="./images/monitor.svg" alt="">
     </ul> -->
-    <a class="image__folder1" href=""><img src="images/folder.svg"> <h1> Menu </h1> <span class="icon_title"> </span> </a>
+    <a class="image__folder1" href="">
+        <img src="images/folder.svg"></img>
+        <span class="otstup"> Progect </span>
+        <span class="icon_title"> </span>
+    </a>
+    <a class="image__folder2" href="accaunt.html">
+        <img src="images/monitor.svg"></img>
+        <span class="otstup"> Account </span>
+        <span class="icon_title"> </span>
+    </a>
+    <a class="image__folder3" href="">
+        <img src="images/users-alt.svg"></img>
+        <span class="otstup"> Group </span>
+        <span class="icon_title"> </span>
+    </a>
+    <a class="image__folder4" href="">
+        <img src="images/cloud-share.svg">
+        <span class="otstup"> Claud </span>
+        <span class="icon_title"> </span>
+    </a>
+    <a class="image__folder5" href="">
+        <img src="images/cog.svg">
+        <span class="otstup"> Setings </span>
+        <span class="icon_title"> </span>
+    </a>
+<!-- 
     <img class="image_r1_2" src="./images/monitor.svg" alt="">
-    <img class="image_r1_3" src="./images/users-alt.svg" alt="">
-    <img class="image_r1_4" src="./images/cloud-share.svg" alt="">
-    <img class="image_r1_5" src="./images/cog.svg" alt="">   
+    <img class="image_r1_3" src="./" alt="">
+    <img class="image_r1_4" src="." alt="">
+    <img class="image_r1_5" src="./images/cog.svg" alt="">    -->
 </div>
 
 
             
 <div class="Rectangle_3"> 
     <p class="text_r3_grey">Project Name </p>
-<<<<<<< HEAD
+
     <p class="text_r3_black">  </p>
-=======
+
     <p class="text_r3_black">HTML/CSS</p>
->>>>>>> eb1a4c7dccef91c0ebe7aeef0e6d19b0d440aff3
 </div>   
             
 
